# dbscan-openmp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
data/input/extra/: custom.csv
docs/: code_overview.md  eval_experimental.md  uso_ia.md
results/: custom_speedup_summary.csv  custom_times.csv  speedup_summary.csv  times.csv
scripts/: DBSCAN_noise.ipynb  env_macos.sh  plot_results.py  plot_speedup.py  run_all.sh  run_bench.sh  run_custom.sh
src/: dbscan_omp_cuadrantes.cpp  dbscan_omp_indivisible.cpp  dbscan_serial.cpp
